--- a/css/style.css
+++ b/css/style.css
@@ -702,7 +702,7 @@ input {
     height: 5vh;
     background-color: transparent;
     font-size: var(--font-size-h3);
-    margin-top: 10px;
+    /* margin-top: 10px; */
     color: var(--secondary-color);
     outline: none;
 
@@ -712,6 +712,7 @@ input {
 input[type="submit"] {
     width: 100%;
     height: 5vh;
+    margin-top: 10px;
     background-color: var(--secondary-color);
     font-size: var(--font-size-h3);
     font-weight: bold;
@@ -761,15 +762,143 @@ input::placeholder {
     flex-direction: column;
     align-content: flex-end;
     justify-content: flex-end;
-    height: var(--header);
+    /* height: var(--header); */
 
     width: 90%;
-    margin-top: 17%;
+    margin-top: calc(var(--header) + 20px);
     background-color: var(--secondary-color);
     border-radius: 10px;
 }
-.content-container{
+
+.custom-block {
+    /* display: flex; */
+    align-items: center;
+    background-color: var(--accent-color);
+    border-radius: 10px;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.search-bar {
+    display: flex;
+    margin-bottom: 5px;
+}
+.search-bar form{
+    width: 100%;
+}
+.search-bar input[type="submit"]{
+    border-radius: 5px;
+    background-color: var(--text-color);
+    color: #fff;
+}
+.search-bar input[type="submit"]:hover{
+    border-radius: 5px;
+    background-color: var(--text-color-second);
+    color: var(--text-color);
+}
+.search-input {
+    padding: 10px 10px;
+    /* border: 1px solid #ccc; */
+    height: auto;
+    border-radius: 5px;
+    background-color: #fff;
+    font-weight: bold;
+    color: #333;
+    border-bottom: none;
+}
+.search-input::placeholder{
+    color: var(--text-color);
+    font-weight: bold;
+}
+
+.search-button {
+    background-color: var(--text-color);
+    color: #fff;
+    border: none;
+    padding: 10px 40px;
+    border-radius: 5px;
+    margin-left: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: var(--font-size-h3);
+
+}
+
+.new-article-button {
+    background-color: var(--text-color);
+    color: #fff;
+    border: none;
+    padding: 40px 40px;
+    border-radius: 5px;
+    margin-left: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: var(--font-size-h3);
+
+    transition: all 0.3s ease;
+}
+.new-article-button:hover{
+    background-color: var(--text-color-second);
+    color: var(--text-color);
+}
+.sort-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.sort-button {
+    background-color: var(--text-color);
+    color: #fff;
+    border: none;
+    padding: 10px 40px;
+    border-radius: 5px 5px 5px 0px;
+    cursor: pointer;
+
+    font-weight: bold;
+    font-size: var(--font-size-h3);
+
+    transition: all 0.3s ease;
+}
+.sort-button:hover{
+    background-color: var(--background-accent-color);
+}
+
+.sort-options {
+    display: none;
+    position: absolute;
+    background-color: var(--text-color);
+    border-radius: 0px 0px 5px 5px;
+    min-width: 160px;
+    z-index: 1;
+    box-shadow: 0px 5px 16px 0px black;
+}
+
+.sort-options a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+    font-weight: bold;
+    font-size: calc(var(--font-size-h4) + 5px);
+
+    transition: all 0.1s ease;
+}
+
+.sort-options a:hover {
+    background-color: var(--text-color-second);
+    color: var(--text-color);
     
+}
+
+.sort-dropdown:hover .sort-options {
+    display: block;
+}
+
+
+.content-container {
+
     min-height: 65vh;
     width: 60%;
     margin-top: calc(var(--header) + 5vh);
@@ -777,16 +906,17 @@ input::placeholder {
     border-radius: 10px;
     background-color: var(--secondary-color);
     background-color: white;
-}
-.content-container{
     font-size: var(--font-size-h3);
+    word-wrap: break-word;
 }
-.content-container input::placeholder{
+
+.content-container input::placeholder {
     font-size: var(--font-size-h3);
     font-weight: bold;
     color: #472D3C;
 }
-.content-container input{
+
+.content-container input {
     margin-bottom: 10px;
     padding: 10px 0px 0px 0px;
     border-bottom: 2px solid var(--text-color);
@@ -795,7 +925,8 @@ input::placeholder {
     color: var(--text-color);
     height: auto;
 }
-.content-container button[type="submit"]{
+
+.content-container button[type="submit"] {
     padding: 10px;
     margin-top: 10px;
     font-size: var(--font-size-h3);
@@ -806,62 +937,17 @@ input::placeholder {
     width: 100%;
     transition: all 0.4s ease;
 }
-.content-container button[type="submit"]:hover{
+
+.content-container button[type="submit"]:hover {
     background-color: var(--accent-color);
     color: var(--text-color);
     transform: scale(1.01);
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
-.content-form{
+
+.content-form {
     width: auto;
-}
-.sort-button {
-    background-color: #6D933C;
-    color: #fff;
-    border: none;
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 4px;
-    cursor: pointer;
-
-    transition: all 0.4s ease;
-}
-
-.sort-button:hover {
-    background-color: #333333;
-}
-
-.sort-menu {
-    display: none;
-    /* position: relative; */
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    background-color: #e3d4b5;
-    list-style: none;
-    border-radius: 4px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-
-    transition: all 0.5s ease;
-}
-
-.sort-menu li {
-    margin: 0;
-    padding: 0;
-}
-
-.sort-menu a {
-    display: block;
-    padding: 10px 15px;
-    color: #333333;
-    text-decoration: none;
-}
-
-.sort-menu a:hover {
-    background-color: #6D933C;
-    color: #fff;
 }
 
 .forum-place {
@@ -887,7 +973,7 @@ input::placeholder {
 
     border-radius: 10px;
     background-color: var(--secondary-color);
-
+    color: var(--text-color);
     transition: all 0.3s ease;
 }
 
@@ -932,10 +1018,8 @@ input::placeholder {
 }
 
 .forum-content-preview {
-    /* height: 50%; */
     border-radius: 7px 7px 0px 0px;
     background-color: var(--accent-color);
-    font-size: var(--font-size-h2);
     overflow: hidden;
 }
 
@@ -974,12 +1058,32 @@ input::placeholder {
 
 }
 
+.root-edit-icon {
+    /* width: 23px; */
+    margin-right: 20px;
+    position: relative;
+    top: -100%;
+}
+
+.edit-icon {
+    width: 23px;
+    /* margin-right: 5px; */
+    position: relative;
+    top: 0;
+    border-radius: 0px;
+    transition: all 0.2s ease;
+}
+
+.edit-icon:hover {
+    transform: scale(1.4);
+}
+
 .social-icon {
     width: 23px;
     margin-right: 5px;
 }
 
-.error-root{
+.error-root {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -990,10 +1094,12 @@ input::placeholder {
     background: var(--background-img);
     animation: animatedBackground 32s linear infinite;
 }
-.error-404{
+
+.error-404 {
     color: var(--text-color-second);
     font-size: var(--font-size-h1);
 }
+
 @keyframes animate {
     0% {
         transform: translateX(-40%);
